# tsr

./: .gitignore  README.md  ThePrimeagen_-_I_hate_reviewing_CSS__ad.srt  main.py  pyproject.toml
tsr/: cli.py  whisper.py
