[project]
name = "tsr"
version = "0.1.0"
description = "transcribe audio/video using faster-whisper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.80.0",
    "faster-whisper>=1.1.1",
    "pydantic>=2.0.0",
]

[project.scripts]
tsr = "tsr.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "python-pptx>=1.0.2",
    "ruff>=0.15.0",
]
